agrego el registro y los uno con sus respectivos links

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             
             
          </div>         
-         <p>¿No tenes cuenta? <a class="link" href="Registrate">Regístrate</a></p>
+         <p>¿No tenes cuenta? <a class="link" href="registro.html">Regístrate</a></p>
          <p>¿Olvidaste tu contraseña? <a class="link" href="Registrate">Olvide mi contraseña</a></p>
      </div>
     </form>
